src/objects/RelatedCourse__c.object
<CustomObject>
    <description>CORE - Junction objected used to capture the relationship between university courses</description>
    <fields>
        <fullName>Course__c</fullName>
        <description>CORE - The primary course we are linking to</description>
        <inlineHelpText>The primary course we are linking to</inlineHelpText>
        <label>Course</label>
        <referenceTo>UniversityCourse__c</referenceTo>
        <relationshipLabel>Related Courses</relationshipLabel>
        <relationshipName>RelatedCourses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <description>CORE - The related account</description>
        <formula>HYPERLINK(&quot;/&quot;&amp; Related_Course__r.Account__r.Id,Related_Course__r.Account__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Course__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>CORE - The related course</description>
        <label>Related Course</label>
        <referenceTo>UniversityCourse__c</referenceTo>
        <relationshipLabel>Related Courses (Related Course)</relationshipLabel>
        <relationshipName>Related_Courses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelationshipClone__c</fullName>
        <description>CORE - Hidden field used in the cloning of the related course</description>
        <label>RelationshipClone</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Enrollments__c</fullName>
        <formula>Related_Course__r.Total_Enrollments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Enrollments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>CORE</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Partner Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross Campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Related Course</label>
    <nameField>
        <displayFormat>RC-{00000}</displayFormat>
        <label>Related Course Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Courses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>